<resources>
    <string name="app_name">MSZIP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Info</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="foglal">Foglalás</string>
    <string name="megse">Mégse</string>
    <string name="nev">Név</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="loginwithgoolgle">Bejelentkezés Google-al</string>
    <string name="eszip">ESZIP</string>
    <string name="default_web_client_id">387382785909-7h5qri35as4dd0tg4lnlgrdcleqlvhbc.apps.googleusercontent.com</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="jelszoagain">Jelszó megerősítés</string>
    <string name="teljesnev">Tejles név</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="szolg_ltat_s_neve">Szolgáltatás neve</string>
    <string name="r">Ár:</string>
    <string name="id_tartam">Időtartam:</string>
    <string name="foglal_s">Foglalás</string>
    <string name="nap">nap</string>
    <string name="info">Info</string>
    <string name="jelsz">Jelszó</string>
    <string name="teljes_n_v">Teljes név</string>
    <string name="profil">Profil</string>
    <string name="fi_k_t_rl_se">Fiók törlése</string>
    <string name="ment_s">Mentés</string>
    <string name="foglal_saim">Foglalásaim</string>
    <string name="d_tum">Dátum</string>
    <string name="szolg_ltat_s">Szolgáltatás</string>
    <string name="id_pont">Időpont</string>
    <string name="t_rl_s">Törlés</string>
    <string name="id_pontok_kezel_se">Időpontok kezelése</string>
    <string name="j_id_pont_hozz_ad_sa">Új időpont hozzáadása</string>
    <string name="szolg_ltat_sok_kezel_se">Szolgáltatások kezelése</string>
    <string name="j_szolg_ltat_s_hozz_ad_sa">Új szolgáltatás hozzáadása</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string name="kb_10perc">kb. 10 perc</string>
    <string name="szolg_ltat_s_ra">Szolgáltatás ára</string>
    <string name="n_v">Név</string>
    <string name="admin">Admin</string>
    <string name="idopontok_list_ja">Idopontok listája</string>
    <string name="szolg_ltat_sok_list_ja">Szolgáltatások listája</string>
    <string name="szerkeszt_s">Szerkesztés</string>
</resources>