<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_foglal"
            android:icon="@drawable/ic_date"
            android:title="@string/foglal" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person"
            android:title="@string/bejelentkezes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/kijelentkezes"
            android:visible="false" />
    </group>
</menu>