<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/id_pontok_kezel_se"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewIdopontok"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/idopontok_list_ja" />

            <Button
                android:id="@+id/buttonAddIdopont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/j_id_pont_hozz_ad_sa" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="#CCCCCC" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/szolg_ltat_sok_kezel_se"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewServices"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/szolg_ltat_sok_list_ja" />

            <Button
                android:id="@+id/buttonAddService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/j_szolg_ltat_s_hozz_ad_sa" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
