<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="500dp"
    android:maxWidth="800dp"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_tum"
        android:layout_marginBottom="4dp" />

    <EditText
        android:id="@+id/editDatetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/yyyy_mm_dd"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/szolg_ltat_s"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp" />

    <Spinner
        android:id="@+id/spinnerService"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>